--- a/flow-kit/src/main/res/layout/zf_cr_custom_item.xml
+++ b/flow-kit/src/main/res/layout/zf_cr_custom_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/zf_cr_black"
         android:textSize="16sp" />
 
     <TextView
