--- a/flow-kit/src/main/res/layout/zf_cr_activity_log_message.xml
+++ b/flow-kit/src/main/res/layout/zf_cr_activity_log_message.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
-    tools:context=".flow.kit.crash.reporter.ui.LogMessageActivity">
+    android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,9 +32,20 @@
                 android:id="@+id/sivDelete"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:padding="2dp"
+                app:srcCompat="@drawable/zf_cr_ic_menu_delete_white_24dp" />
+
+            <!--<com.zeoflow.material.elements.imageview.ShapeableImageView
+                android:id="@+id/sivDelete"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
                 android:layout_toStartOf="@+id/sivShare"
+                android:padding="2dp"
                 app:srcCompat="@drawable/zf_cr_ic_menu_delete_white_24dp" />
 
             <com.zeoflow.material.elements.imageview.ShapeableImageView
@@ -45,7 +55,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
-                app:srcCompat="@drawable/zf_cr_ic_menu_share_white_24dp" />
+                android:padding="2dp"
+                app:srcCompat="@drawable/zf_cr_ic_menu_share_white_24dp" />-->
         </RelativeLayout>
 
         <HorizontalScrollView
