--- a/flow-kit/src/main/res/layout/zf_cr_crash_reporter_activity.xml
+++ b/flow-kit/src/main/res/layout/zf_cr_crash_reporter_activity.xml
@@ -36,6 +36,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
+                android:padding="2dp"
                 app:srcCompat="@drawable/zf_cr_ic_menu_delete_white_24dp" />
         </RelativeLayout>
 
