--- a/flow-kit/src/main/res/layout/zf_cr_activity_log_message.xml
+++ b/flow-kit/src/main/res/layout/zf_cr_activity_log_message.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff">
@@ -24,6 +23,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="Log Message"
+                android:fontFamily="@font/font"
                 android:textAllCaps="true"
                 android:textColor="#fff"
                 android:textSize="16sp" />
@@ -68,6 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
+                android:fontFamily="@font/font"
                 android:textColor="#ff0000" />
         </HorizontalScrollView>
 
