--- a/flow-kit/src/main/res/layout/zf_cr_crash_reporter_activity.xml
+++ b/flow-kit/src/main/res/layout/zf_cr_crash_reporter_activity.xml
@@ -27,6 +27,7 @@
                 android:text="Crash Log"
                 android:textAllCaps="true"
                 android:textColor="#fff"
+                android:fontFamily="@font/font"
                 android:textSize="16sp" />
 
             <com.zeoflow.material.elements.imageview.ShapeableImageView
